--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./logo.png" />
+    <link
+      rel="icon"
+      href="https://firebasestorage.googleapis.com/v0/b/quanganhlands-24c46.appspot.com/o/img%2FLogo.png?alt=media&token=b76c5998-ea20-4cd0-b829-574012be760b"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +14,7 @@
     />
     <link
       rel="apple-touch-icon"
-      href="https://firebasestorage.googleapis.com/v0/b/khogachtinp.appspot.com/o/img%2Fz4389707119439_b2577afc9718501441ffaf1ae38d1281-removebg-preview.png?alt=media&token=6066e727-39f9-4697-90a8-26eaba866ebc&_gl=1*xcjnck*_ga*MTA1MjQ5NTQ0OS4xNjg0NDAxMjc5*_ga_CW55HF8NVT*MTY4NjIxNjkxOS40Ny4xLjE2ODYyMTcwMTMuMC4wLjA."
+      href="https://firebasestorage.googleapis.com/v0/b/quanganhlands-24c46.appspot.com/o/img%2FLogo.png?alt=media&token=b76c5998-ea20-4cd0-b829-574012be760b"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
