--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <link
+      rel="icon"
+      href="https://firebasestorage.googleapis.com/v0/b/quanganhlands-24c46.appspot.com/o/img%2FfullLogo.png?alt=media&token=928702d9-7802-419f-a466-fa107e068acb"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   </head>
-
+  <title>Nội thất Quang Anh</title>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
